// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary"
  id="default"
  onClick={[Function]}
  type="button"
>
  <span>
    default
  </span>
</button>
`;

exports[`Render properties.block: true 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-block"
  id="properties.block: true"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.block: true
  </span>
</button>
`;

exports[`Render properties.color: #9c27b0 1`] = `
<button
  className="ant-btn {\\"style\\":[{\\"backgroundColor\\":\\"#9c27b0\\",\\"borderColor\\":\\"#9c27b0\\",\\"&:active\\":{\\"backgroundColor\\":\\"#75178a\\",\\"borderColor\\":\\"#75178a\\"},\\"&:hover\\":{\\"backgroundColor\\":\\"#af48bd\\",\\"borderColor\\":\\"#af48bd\\"}},null]} ant-btn-primary"
  id="properties.color: #9c27b0"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.color: #9c27b0
  </span>
</button>
`;

exports[`Render properties.danger: true 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-dangerous"
  id="properties.danger: true"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.danger: true
  </span>
</button>
`;

exports[`Render properties.disabled: true 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary"
  disabled={true}
  id="properties.disabled: true"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.disabled: true
  </span>
</button>
`;

exports[`Render properties.ghost: true 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-background-ghost"
  id="properties.ghost: true"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.ghost: true
  </span>
</button>
`;

exports[`Render properties.hideTitle: true 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-icon-only"
  id="properties.hideTitle: true"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters {\\"style\\":[{},null]}"
    id="properties.hideTitle: true_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</button>
`;

exports[`Render properties.href: www.lowdefy.com 1`] = `
<a
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary"
  href="https://www.lowdefy.com"
  id="properties.href: www.lowdefy.com"
  onClick={[Function]}
>
  <span>
    properties.href: www.lowdefy.com
  </span>
</a>
`;

exports[`Render properties.icon object 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary"
  id="properties.icon object"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters {\\"style\\":[{\\"color\\":\\"red\\"},null]}"
    id="properties.icon object_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span>
    properties.icon object
  </span>
</button>
`;

exports[`Render properties.icon string 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary"
  id="properties.icon string"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters {\\"style\\":[{},null]}"
    id="properties.icon string_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span>
    properties.icon string
  </span>
</button>
`;

exports[`Render properties.shape: circle 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-circle"
  id="properties.shape: circle"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.shape: circle
  </span>
</button>
`;

exports[`Render properties.shape: round 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-round"
  id="properties.shape: round"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.shape: round
  </span>
</button>
`;

exports[`Render properties.size: large 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-lg"
  id="properties.size: large"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.size: large
  </span>
</button>
`;

exports[`Render properties.size: small 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary ant-btn-sm"
  id="properties.size: small"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.size: small
  </span>
</button>
`;

exports[`Render properties.title 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-primary"
  id="properties.title"
  onClick={[Function]}
  type="button"
>
  <span>
    Button title
  </span>
</button>
`;

exports[`Render properties.type: danger 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-danger"
  id="properties.type: danger"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.type: danger
  </span>
</button>
`;

exports[`Render properties.type: dashed 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-dashed"
  id="properties.type: dashed"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.type: dashed
  </span>
</button>
`;

exports[`Render properties.type: default 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-default"
  id="properties.type: default"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.type: default
  </span>
</button>
`;

exports[`Render properties.type: link 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-link"
  id="properties.type: link"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.type: link
  </span>
</button>
`;

exports[`Render properties.type: text 1`] = `
<button
  className="ant-btn {\\"style\\":[{},null]} ant-btn-text"
  id="properties.type: text"
  onClick={[Function]}
  type="button"
>
  <span>
    properties.type: text
  </span>
</button>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.block: true 1`] = `true`;

exports[`Test Schema properties.block: true 2`] = `null`;

exports[`Test Schema properties.color: #9c27b0 1`] = `true`;

exports[`Test Schema properties.color: #9c27b0 2`] = `null`;

exports[`Test Schema properties.danger: true 1`] = `true`;

exports[`Test Schema properties.danger: true 2`] = `null`;

exports[`Test Schema properties.disabled: true 1`] = `true`;

exports[`Test Schema properties.disabled: true 2`] = `null`;

exports[`Test Schema properties.ghost: true 1`] = `true`;

exports[`Test Schema properties.ghost: true 2`] = `null`;

exports[`Test Schema properties.hideTitle: true 1`] = `true`;

exports[`Test Schema properties.hideTitle: true 2`] = `null`;

exports[`Test Schema properties.href: www.lowdefy.com 1`] = `true`;

exports[`Test Schema properties.href: www.lowdefy.com 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.shape: circle 1`] = `true`;

exports[`Test Schema properties.shape: circle 2`] = `null`;

exports[`Test Schema properties.shape: round 1`] = `true`;

exports[`Test Schema properties.shape: round 2`] = `null`;

exports[`Test Schema properties.size: large 1`] = `true`;

exports[`Test Schema properties.size: large 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties.type: danger 1`] = `true`;

exports[`Test Schema properties.type: danger 2`] = `null`;

exports[`Test Schema properties.type: dashed 1`] = `true`;

exports[`Test Schema properties.type: dashed 2`] = `null`;

exports[`Test Schema properties.type: default 1`] = `true`;

exports[`Test Schema properties.type: default 2`] = `null`;

exports[`Test Schema properties.type: link 1`] = `true`;

exports[`Test Schema properties.type: link 2`] = `null`;

exports[`Test Schema properties.type: text 1`] = `true`;

exports[`Test Schema properties.type: text 2`] = `null`;
